# snipsh

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  SnipSh.cabal  Snipsh.cabal  TODOS.md  config.default.json
app/: Main.hs  SnipSh.hs
lib/: SnipSh.hs  Snipsh.hs
lib/SnipSh/: APIClient.hs  CLI.hs  Config.hs
lib/Snipsh/: CLI.hs  Config.hs
