name:                SnipSh
version:             0.0.1
synopsis:            A cli util for the GitLab snippets api
homepage:            https://github.com/ccntrq/snipSh#readme
license:             MIT
license-file:        LICENSE.md
author:              Alex 'ccntrq' Pankoff
copyright:           2017 Alexander Pankoff
category:            Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  ghc-options:         -Wall
  exposed-modules:     SnipSh
                     , SnipSh.Config
                     , SnipSh.CLI
  build-depends:       base >= 4.7 && < 5
                     , req
                     , aeson
                     , text
                     , bytestring
                     , mtl
                     , process
                     , temporary
  default-language:    Haskell2010

executable snipsh
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , SnipSh
  default-language:    Haskell2010
